# NCEPLIBS-prod_util

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  dir_1141d146babe86e472747a19778793e9.html  dir_3caa188458a3b7a7a0a88ae28c9507b2.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5b300c45fe72d4c6f7e156ac2e310f16.html  dir_d8329bcbdc280a084e37fc1938723c54.html  dir_d8b772108138bf796aaa3f7fe4e09294.html  files.html  fsync__file_8c.html  fsync__file_8c.js  fsync__file_8c_source.html  index.html  mdate_8f.html  mdate_8f.js  mdate_8f_source.html  navtreedata.js  navtreeindex0.js  ndate_8f.html  ndate_8f_source.html  nhour_8f.html  nhour_8f.js  nhour_8f_source.html
.github/workflows/: GCC.yml  Intel.yml  Linux_versions.yml  Spack.yml  developer.yml
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
exec/: fsync_file  mdate  ndate  nhour
parm/: compaths_prod.list
search/: all_1.js  files_1.js
sorc/: CMakeLists.txt
sorc/fsync_file.cd/: CMakeLists.txt  fsync_file.c  makefile
sorc/mdate.fd/: CMakeLists.txt  makefile  mdate.f
sorc/ndate.fd/: CMakeLists.txt  makefile  ndate.f
sorc/nhour.fd/: CMakeLists.txt  makefile  nhour.f
spack/: package.py
tests/: CMakeLists.txt  test_mdate.sh  test_ndate.sh  test_nhour.sh
ush/: CMakeLists.txt  compath.py  cpfs  err_chk  err_exit  finddate.sh  getjsonvalue  getsystem  getsystem.pl  mail.py  postmsg  setpdy.sh  startmsg
ver-1.2.2/: files_dup.js  navtreedata.js  navtreeindex0.js
ver-1.2.2/search/: all_0.js  all_2.js  files_0.js  files_2.js  searchdata.js
ver-1.2.2/ver-1.2.2/: ndate_8f.js
